Search API (#25)
* update search api

* fix empty list

---------
